# Fitnesstan--FYP

./: .gitignore  .hintrc  fitnesstan-Dataset.rar
fitnesstan-AppDevelopment/: .hintrc  README.md  pubspec.yaml
fitnesstan-AppDevelopment/lib/: common_widgets.dart  dashboard.dart  diet_dashboard.dart  drawer.dart  login.dart  main.dart  meal_section_screen.dart  signup.dart  sleep_dashboard.dart  verification.dart  welcome.dart  workout_button.dart  workout_dashboard.dart
fitnesstan-AppDevelopment/linux/: CMakeLists.txt  my_application.cc
fitnesstan-AppDevelopment/test/: widget_test.dart
fitnesstan-AppDevelopment/web/: index.html  manifest.json
fitnesstan-AppDevelopment/windows/: CMakeLists.txt
fitnesstan-Dataset/obaid/: cleaned_nutrition.csv
fitnesstan-backend/: pom.xml
fitnesstan-diagrams/: admin usecase.vsdx  user usecase.vsdx
fitnesstan-documentation/: FItnessstan_Final Presentation_Part 2.pptx  Fitnesstan_Documentation.docx  ~$tnesstan_Documentation.docx
fitnesstan-flask-server/: app.py
fitnesstan-flask-server/Clustering/: cleaned_and_preprocessed_final_features.csv  cluster_composition.csv  clustered_data_14_clusters_cleaned.csv  kmeans_14_clusters_model.pkl  pca_model.pkl  scaler.pkl
fitnesstan-flask-server/Regression/: report.docx  test_calorie_model.py
fitnesstan-model/: linear-Regression_fyp.ipynb  linear_Regression_fyp_new.ipynb
fitnesstan-model/Zain/zain/zain/backend/: pyproject.toml
fitnesstan-model/Zain/zain/zain/backend/backend/: categorical_imputer.pkl  pca_model.pkl
fitnesstan-website/: package-lock.json  package.json
(+157 files in other folders)
