[tool.poetry]
name = "my_fastapi_project"
version = "0.1.0"
description = "A FastAPI service for classification predictions"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = "^1.10.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
xgboost = "^1.7.0"
lightgbm = "^4.0.0"  # If needed, remove if not required
imblearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
